# roman_history_bot

./: .gitignore  Readme.md  pyproject.toml
notes/: Resumen_inicial.md
tests/: test_auth.py  test_interactive.py  test_mlx.py  test_mlx_model.py
